# etl-earthquakes-cl

./: .replit  README.md  main-etl.py  pyproject.toml
earthquakes_data/: 2022-11-09_earthquales.csv
